# dots.tts

./: pyproject.toml
src/dots_tts/: runtime.py
src/dots_tts/models/dots_tts/: model.py
src/dots_tts/modules/vocoder/: bigvgan.py
src/dots_tts/utils/: audio.py  text.py
